# mospi-esankhyiki

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
esankhyiki/: __init__.py  client.py  datasets.py  formatters.py
esankhyiki/swagger/: swagger_user_plfs.yaml  swagger_user_wpi.yaml
examples/: esankhyiki_tutorial.ipynb  nsoindia_tutorial.ipynb
nsoindia/: __init__.py  __main__.py  cli.py  client.py  datasets.py  formatters.py
nsoindia/swagger/: swagger_user_iip.yaml  swagger_user_plfs.yaml  swagger_user_wpi.yaml
tests/: conftest.py  test_api_contract.py  test_get_data.py  test_get_indicators.py  test_get_metadata.py  test_list_datasets.py
