[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nsoindia"
version = "0.1.0"
description = "Python client for India's National Statistical Office (NSO/MoSPI) data portal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Satvik Bajpai" },
    { name = "Sarthak Srivastava" },
]
keywords = ["nsoindia", "nso", "mospi", "india", "statistics", "government", "data", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pandas>=1.5.0",
    "nbclient>=0.10.0",
    "nbformat>=5.10.0",
]

[project.urls]
Homepage = "https://github.com/nso-india/mospidata"
Repository = "https://github.com/nso-india/mospidata"
Issues = "https://github.com/nso-india/mospidata/issues"

[tool.hatch.build.targets.wheel]
packages = ["nsoindia"]

[tool.hatch.build.targets.sdist]
include = ["nsoindia/**"]
